// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component should render with a given initial-value 1`] = `
<DocumentFragment>
  <div
    data-testid="overlay"
  >
    <div
      class="container"
    >
      <div
        class="grid grid"
      >
        <div
          class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
        >
          <div
            class="field"
          >
            <div
              data-testid="single-autocomplete"
            />
            <div
              class="errorLabel"
            />
          </div>
        </div>
        <div
          class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
        >
          <div
            class="field"
          >
            <div
              data-testid="map-container"
            >
              <div
                data-testid="marker"
              />
            </div>
            <div
              class="errorLabel"
            />
          </div>
        </div>
        <div
          class="item gridItem colSpan colSpan-4 space-before-0 space-after-0"
        >
          <div
            class="field"
          >
            <label
              class="label"
            >
              sulu_location.latitude *
            </label>
            <div
              data-testid="number"
              data-value="22"
            />
            <div
              class="errorLabel"
            />
          </div>
        </div>
        <div
          class="item gridItem colSpan colSpan-4 space-before-0 space-after-0"
        >
          <div
            class="field"
          >
            <label
              class="label"
            >
              sulu_location.longitude *
            </label>
            <div
              data-testid="number"
              data-value="33"
            />
            <div
              class="errorLabel"
            />
          </div>
        </div>
        <div
          class="item gridItem colSpan colSpan-4 space-before-0 space-after-0"
        >
          <div
            class="field"
          >
            <label
              class="label"
            >
              sulu_location.zoom *
            </label>
            <div
              data-testid="number"
              data-value="5"
            />
            <div
              class="errorLabel"
            />
          </div>
        </div>
        <div
          class="section gridSection colSpan colSpan-12 space-before-0 space-after-0"
        >
          <div
            class="item dividerContainer colSpan colSpan-12 space-before-0 space-after-0"
          >
            <div
              class="divider"
            >
              sulu_location.additional_information
            </div>
          </div>
          <div
            class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
          >
            <div
              class="field"
            >
              <label
                class="label"
              >
                sulu_location.title
              </label>
              <div
                data-testid="input"
                data-value="title-123"
              />
              <div
                class="errorLabel"
              />
            </div>
          </div>
          <div
            class="item gridItem colSpan colSpan-6 space-before-0 space-after-0"
          >
            <div
              class="field"
            >
              <label
                class="label"
              >
                sulu_location.street
              </label>
              <div
                data-testid="input"
                data-value="street-123"
              />
              <div
                class="errorLabel"
              />
            </div>
          </div>
          <div
            class="item gridItem colSpan colSpan-6 space-before-0 space-after-0"
          >
            <div
              class="field"
            >
              <label
                class="label"
              >
                sulu_location.number
              </label>
              <div
                data-testid="input"
                data-value=""
              />
              <div
                class="errorLabel"
              />
            </div>
          </div>
          <div
            class="item gridItem colSpan colSpan-6 space-before-0 space-after-0"
          >
            <div
              class="field"
            >
              <label
                class="label"
              >
                sulu_location.code
              </label>
              <div
                data-testid="input"
                data-value="code-123"
              />
              <div
                class="errorLabel"
              />
            </div>
          </div>
          <div
            class="item gridItem colSpan colSpan-6 space-before-0 space-after-0"
          >
            <div
              class="field"
            >
              <label
                class="label"
              >
                sulu_location.town
              </label>
              <div
                data-testid="input"
                data-value="town-123"
              />
              <div
                class="errorLabel"
              />
            </div>
          </div>
          <div
            class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
          >
            <div
              class="field"
            >
              <label
                class="label"
              >
                sulu_location.country
              </label>
              <div
                data-testid="input"
                data-value=""
              />
              <div
                class="errorLabel"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Component should render without a given initial-value 1`] = `
<DocumentFragment>
  <div
    data-testid="overlay"
  >
    <div
      class="container"
    >
      <div
        class="grid grid"
      >
        <div
          class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
        >
          <div
            class="field"
          >
            <div
              data-testid="single-autocomplete"
            />
            <div
              class="errorLabel"
            />
          </div>
        </div>
        <div
          class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
        >
          <div
            class="field"
          >
            <div
              data-testid="map-container"
            >
              <div
                data-testid="marker"
              />
            </div>
            <div
              class="errorLabel"
            />
          </div>
        </div>
        <div
          class="item gridItem colSpan colSpan-4 space-before-0 space-after-0"
        >
          <div
            class="field"
          >
            <label
              class="label"
            >
              sulu_location.latitude *
            </label>
            <div
              data-testid="number"
              data-value=""
            />
            <div
              class="errorLabel"
            />
          </div>
        </div>
        <div
          class="item gridItem colSpan colSpan-4 space-before-0 space-after-0"
        >
          <div
            class="field"
          >
            <label
              class="label"
            >
              sulu_location.longitude *
            </label>
            <div
              data-testid="number"
              data-value=""
            />
            <div
              class="errorLabel"
            />
          </div>
        </div>
        <div
          class="item gridItem colSpan colSpan-4 space-before-0 space-after-0"
        >
          <div
            class="field"
          >
            <label
              class="label"
            >
              sulu_location.zoom *
            </label>
            <div
              data-testid="number"
              data-value="1"
            />
            <div
              class="errorLabel"
            />
          </div>
        </div>
        <div
          class="section gridSection colSpan colSpan-12 space-before-0 space-after-0"
        >
          <div
            class="item dividerContainer colSpan colSpan-12 space-before-0 space-after-0"
          >
            <div
              class="divider"
            >
              sulu_location.additional_information
            </div>
          </div>
          <div
            class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
          >
            <div
              class="field"
            >
              <label
                class="label"
              >
                sulu_location.title
              </label>
              <div
                data-testid="input"
                data-value=""
              />
              <div
                class="errorLabel"
              />
            </div>
          </div>
          <div
            class="item gridItem colSpan colSpan-6 space-before-0 space-after-0"
          >
            <div
              class="field"
            >
              <label
                class="label"
              >
                sulu_location.street
              </label>
              <div
                data-testid="input"
                data-value=""
              />
              <div
                class="errorLabel"
              />
            </div>
          </div>
          <div
            class="item gridItem colSpan colSpan-6 space-before-0 space-after-0"
          >
            <div
              class="field"
            >
              <label
                class="label"
              >
                sulu_location.number
              </label>
              <div
                data-testid="input"
                data-value=""
              />
              <div
                class="errorLabel"
              />
            </div>
          </div>
          <div
            class="item gridItem colSpan colSpan-6 space-before-0 space-after-0"
          >
            <div
              class="field"
            >
              <label
                class="label"
              >
                sulu_location.code
              </label>
              <div
                data-testid="input"
                data-value=""
              />
              <div
                class="errorLabel"
              />
            </div>
          </div>
          <div
            class="item gridItem colSpan colSpan-6 space-before-0 space-after-0"
          >
            <div
              class="field"
            >
              <label
                class="label"
              >
                sulu_location.town
              </label>
              <div
                data-testid="input"
                data-value=""
              />
              <div
                class="errorLabel"
              />
            </div>
          </div>
          <div
            class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
          >
            <div
              class="field"
            >
              <label
                class="label"
              >
                sulu_location.country
              </label>
              <div
                data-testid="input"
                data-value=""
              />
              <div
                class="errorLabel"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
